[package]
name = "gd_learn_001"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.50.0"
piston2d-graphics = "0.36.0"
piston_window = "0.109.0"
piston2d-opengl_graphics = "0.72.0"
uuid="0.8.1"
image="0.23.6"
gfx = "0.18.2"