[package]
name = "gd_learn_001"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
mint="0.5.5"
uuid="0.8.1"
image="0.23.6"
gfx = "0.18.2"
rand = "0.7.3"
rayon="1.3.1"