[package]
name = "pixel_game_engine"
version = "0.1.0"
authors = ["Tarin Mahmood <mahmood.tarin+home@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

piston = "0.53.1"
piston2d-graphics = "0.41.0"
pistoncore-glutin_window = "0.69.0"
piston_window = "0.121.0"
piston2d-opengl_graphics = "0.79.0"
mint="0.5.8"
uuid="1.0.0-alpha.1"
image="0.23.14"
gfx = "0.18.2"
rand = "0.8.4"
rayon="1.5.1"